<!--
  ~ Copyright (c) 2018. Mark Soft - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  -->

<resources>
    <string name="app_name">The Chago</string>

    <string name="place_latest_visit_store_header_text">Latest Visit Stores</string>
    <string name="place_near_by_header_text">Near by Stores</string>
    <string name="distance_format_kilo_meter">%skm</string>
    <string name="distance_format_meter">%sm</string>
    <string name="distance_description_under_100m">Closer 100M</string>

    <string name="added_to_cart">Added %s into cart.</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_option_not_selected">Not Selected</string>
    <string name="toast_add_to_cart_item_succeed">Added to cart</string>
    <string name="button_text_add_to_cart">ADD TO CART</string>
    <string name="button_text_send_order">PLACE ORDER</string>
    <string name="total_price">Total Price</string>
    <string name="personal_option_button_text">PERSONAL OPTION</string>
    <string name="amount_description">Amount</string>
    <string name="cart_title_text">Cart(%1$d)</string>

    <string name="tab_title_is_finding_store">Is Finding…</string>
    <string name="tab_title_places">Places</string>
    <string name="tab_title_orders">Orders</string>

    <string name="theres_no_item_in_cart">Nothing in Cart</string>

    <string name="menu_order_name_and">And %s</string>

    <string name="order_number_description">Order Number:&#160;</string>
    <string name="order_time_description">Order Time:&#160;</string>

    <string name="order_information_title">Order Information</string>
    <string name="order_name_title">Order Name</string>
    <string name="order_number_title">Order Number</string>
    <string name="order_price_title">Order Price</string>
    <string name="order_detail_title">Order Detail</string>
    <string name="order_time_title">Order Time</string>
    <string name="order_cancel_button_text">Cancel Order</string>
    <string name="order_amount_title">Amount</string>

    <string name="order_progress_channel_name">ZUMUN Order progress</string>
    <string name="is_finding_store">If inside ZUMUN store, \\nthe menu will appear in here.</string>

    <string name="order_request_progress">Order requesting… Do not turn off!</string>
    <string name="store_not_exist_current_map">There is no ZUMUN store on current map.</string>
    <string name="turn_vibration_off_button_text">Turn Alarm Off</string>

    <string name="order_complete_information_title">%s is Complete!</string>
    <string name="order_complete_information_content">Please take out with showing this number.</string>

    <string name="order_list_empty_text">There is no order yet</string>
</resources>
